# bort

./: .gitignore  Cargo.toml  deploy.sh  items  items_cargo_data_utf16.txt  items_item_data_utf16.txt  modified_items.txt
old_resources/: t0_items.txt  t1_cargo.txt  t1_items.txt
src/: main.rs
