[package]
name = "bort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
dotenv = "0.15.0"
poise = "0.6.1"
serenity = "0.12.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
