[package]
name = "bort"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.4"
clokwerk = "0.4.0"
csv = "1.3.0"
dotenv = "0.15.0"
futures = "0.3.30"
poise = "0.6.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0.198"
serenity = "0.12.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
